Create an images files and include files

--- a/recipes/Detroit-Style-Pizza.html
+++ b/recipes/Detroit-Style-Pizza.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Detroit Style Pizza</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F5822211.jpg" alt="Detroit-Style-Pizza" width="300">
+    <img src="/images/detroid-style-pizza.jpg" alt="Detroit-Style-Pizza" width="300">
     <h2>Description</h2>
     <p>Forget the old Chicago vs. NY debate! America's best pizza could very well be Detroit-style pizza. Even though it's often referred to as 'deep dish,' I don't think that accurately captures the essence of this crispy, crusty, crazy-good slice. It has flavor elements of a slightly charred thin-crust pizza, with the texture of light, airy focaccia. Plus, if you use the properly shaped pan, the edges of your crust get wonderfully crunchy, making for a truly unique experience.</p>
     <h3>Ingredients</h3>
