--- a/recipes/Sexy-Shrimp-Scampi.html
+++ b/recipes/Sexy-Shrimp-Scampi.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sexy-Shrimp-Scampi</title>
+    <title>Sexy Shrimp Scampi</title>
 </head>
 <body>
     <h1>Sexy Shrimp Scampi</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7753673.jpg" alt="Simple-Creme-Brulee" width="300">
+    <img src="/images/Sexy-Shrimp-Scampi.jpg" alt="Sexy-Shrimp-Scampi" width="300">
     <h2>Description</h2>
     <p>This simple but flavorful Scampi is sure to be a big hit.</p>
     <h3>Ingredients</h3>
