--- a/recipes/Simple-Creme-Brulee.html
+++ b/recipes/Simple-Creme-Brulee.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple-Creme-Brulee</title>
+    <title>Simple Creme Brulee</title>
 </head>
 <body>
     <h1>Simple Creme Brulee</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7753673.jpg" alt="Simple-Creme-Brulee" width="300">
+    <img src="/images/Simple-Creme-Brulee.jpg" alt="Simple-Creme-Brulee" width="300">
     <h2>Description</h2>
     <p>Rich, creamy creme brulee should still be jiggly in the center when you pull it out of the oven.</p>
     <h3>Ingredients</h3>
