--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li><a href="./recipes/Detroit-Style-Pizza.html">Detroit Style Pizza</a></li>
         <li><a href="./recipes/Lobster-Thermidor.html">Lobster Thermidor</a></li>
         <li><a href="./recipes/Simple-Creme-Brulee.html">Simple Cree Brulee</a></li>
-        <li><a href="./recipes/Sexy-Shrimp-Scampi.html">Simple Cree Brulee</a></li>
+        <li><a href="./recipes/Sexy-Shrimp-Scampi.html">Sexy Shrimp Scampi</a></li>
     </ul>
 </body>
 </html>
