--- a/recipes/Lobster-Thermidor.html
+++ b/recipes/Lobster-Thermidor.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lobster-Thermidor</title>
+    <title>Lobster Thermidor</title>
 </head>
 <body>
-    <h1>Detroit Style Pizza</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4789857.jpg" alt="Lobster-Thermidor" width="300">
+    <h1>Lobster Thermidor</h1>
+    <img src="/images/Lobster-Thermidor.jpg" alt="Lobster-Thermidor" width="300">
     <h2>Description</h2>
     <p>I used a nice light sauce on this iconic special occasion dish--lobster thermidor--rather than the thick, cheesy sauce popular in the '80s. Lobster is sweet and rich tasting on its own, so the lighter sauce makes so much sense. And what's even better, you can prep these ahead of time and just pop them in the oven when your guests arrive!.</p>
     <h3>Ingredients</h3>
