Change img url in src

--- a/recipes/Lobster-Thermidor.html
+++ b/recipes/Lobster-Thermidor.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Lobster Thermidor</h1>
-    <img src="/images/Lobster-Thermidor.jpg" alt="Lobster-Thermidor" width="300">
+    <img src="../images/Lobster-Thermidor.jpg" alt="Lobster-Thermidor" width="300">
     <h2>Description</h2>
     <p>I used a nice light sauce on this iconic special occasion dish--lobster thermidor--rather than the thick, cheesy sauce popular in the '80s. Lobster is sweet and rich tasting on its own, so the lighter sauce makes so much sense. And what's even better, you can prep these ahead of time and just pop them in the oven when your guests arrive!.</p>
     <h3>Ingredients</h3>
