--- a/recipes/Sexy-Shrimp-Scampi.html
+++ b/recipes/Sexy-Shrimp-Scampi.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Sexy Shrimp Scampi</h1>
-    <img src="/images/Sexy-Shrimp-Scampi.jpg" alt="Sexy-Shrimp-Scampi" width="300">
+    <img src="../images/Sexy-Shrimp-Scampi.jpg" alt="Sexy-Shrimp-Scampi" width="300">
     <h2>Description</h2>
     <p>This simple but flavorful Scampi is sure to be a big hit.</p>
     <h3>Ingredients</h3>
