--- a/recipes/Simple-Creme-Brulee.html
+++ b/recipes/Simple-Creme-Brulee.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Simple Creme Brulee</h1>
-    <img src="/images/Simple-Creme-Brulee.jpg" alt="Simple-Creme-Brulee" width="300">
+    <img src="../images/Simple-Creme-Brulee.jpg" alt="Simple-Creme-Brulee" width="300">
     <h2>Description</h2>
     <p>Rich, creamy creme brulee should still be jiggly in the center when you pull it out of the oven.</p>
     <h3>Ingredients</h3>
