Add a back to home link at recipes

--- a/recipes/Detroit-Style-Pizza.html
+++ b/recipes/Detroit-Style-Pizza.html
@@ -49,5 +49,6 @@
         <li>Very carefully slide pizza onto a cutting board using a spatula. Cut into individual pieces using the lines of sauce as a guide.</li>
 
     </ol>
+    <p><a href="../index.html">Back to home.</a></p>
 </body>
 </html>
