--- a/recipes/Lobster-Thermidor.html
+++ b/recipes/Lobster-Thermidor.html
@@ -41,5 +41,6 @@
         <li>Bake in preheated oven until nicely browned and heated through, about 10 minutes. If you like, you can turn on the broiler and broil 1 minute until tops are golden and crispy.</li>
 
     </ol>
+    <p><a href="../index.html">Back to home.</a></p>
 </body>
 </html>
