--- a/recipes/Sexy-Shrimp-Scampi.html
+++ b/recipes/Sexy-Shrimp-Scampi.html
@@ -26,5 +26,7 @@
         <li>Toss the shrimp in a bowl with the olive oil, melted butter, garlic, salt, and pepper; set aside for 10 minutes. Arrange the shrimp in a circular pattern in a round casserole dish.</li>
         <li>Bake in the preheated oven until the shrimp are pink and cooked through, about 15 minutes.</li>
     </ol>
+    <p><a href="../index.html">Back to home.</a></p>
+
 </body>
 </html>
