--- a/recipes/Simple-Creme-Brulee.html
+++ b/recipes/Simple-Creme-Brulee.html
@@ -27,5 +27,7 @@
         <li>Bake in the preheated oven until creme desserts are set but still slightly jiggly when shaken, about 50 minutes. Remove ramekins from hot water and chill in refrigerator until cold, at least 2 hours.</li>
         <li>Sprinkle 1 tablespoon of sugar evenly over the top of each dessert. Use a kitchen torch to lightly toast and melt the sugar topping until brown and bubbly, about 30 seconds. Let the sugar topping cool before serving. To serve, use a spoon to crack the crisp sugar open to reveal the creamy dessert underneath.</li>
     </ol>
+    <p><a href="../index.html">Back to home.</a></p>
+
 </body>
 </html>
