--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=	, initial-scale=1.0">
     <title>odin-recipe</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <img src="https://cdn.shopify.com/s/files/1/2392/8713/files/odin-et-gungnir.jpg?v=1564304468" alt="La lance d'Odin">   
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./recipes/Detroit-Style-Pizza.html">Detroit Style Pizza</a></li>
+        <li class="odd"><a href="./recipes/Detroit-Style-Pizza.html">Detroit Style Pizza</a></li>
         <li><a href="./recipes/Lobster-Thermidor.html">Lobster Thermidor</a></li>
-        <li><a href="./recipes/Simple-Creme-Brulee.html">Simple Cree Brulee</a></li>
+        <li  class="odd"><a href="./recipes/Simple-Creme-Brulee.html">Simple Cree Brulee</a></li>
         <li><a href="./recipes/Sexy-Shrimp-Scampi.html">Sexy Shrimp Scampi</a></li>
     </ul>
 </body>
